# niru

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
crates/niru/: Cargo.toml
crates/niru-core/: Cargo.toml
crates/niru-core/src/: ipc.rs  lib.rs  models.rs
crates/niru/src/: ipc.rs  main.rs
crates/nirud/: Cargo.toml
crates/nirud/src/: db.rs  ipc.rs  main.rs  timer.rs
