[package]
name = "niru"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "niru"
path = "src/main.rs"

[dependencies]
niru-core = { path = "../niru-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ratatui = "0.26"
crossterm = "0.27"
log = "0.4"
env_logger = "0.11"