[package]
name = "nirud"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nirud"
path = "src/main.rs"

[dependencies]
niru-core = { path = "../niru-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
notify-rust = "4"
rodio = "0.19"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
anyhow = "1"
